--- a/lab3/background.html
+++ b/lab3/background.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+    <!--punkt 3-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontrola Tła Obrazka</title>
+    <title>Tło - obrazek</title>
     <link rel="stylesheet" href="background.css"> 
 </head>
 <body>
