--- a/lab3/font.html
+++ b/lab3/font.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--punkt 2, 6-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS w zewnętrnym arkuszu</title>
     <link rel="stylesheet" href="font.css">
 </head>
 <body>
-    <h1>CSS w zewnętrnym arkuszu</h1>
+    <h1>CSS w zewnętrnym arkuszu - czcionki</h1>
     
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio magni molestiae, expedita, dolorem porro voluptas cum sit officiis incidunt nihil ullam amet consequatur tenetur atque deserunt nesciunt adipisci inventore sed?</p>
     <h2>To jest nagłówek h2</h2>
