--- a/lab3/menu.html
+++ b/lab3/menu.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 
+    
+    <section id="sekcja-full">
     <header>
         <h1>Główna Strona Witryny</h1>
     </header>
 
-    <nav>
+            <nav>
         <ul>
             <li><a href="index.html">Start</a></li>
             
@@ -36,10 +38,10 @@
             <li><a href="table.html">Tabele</a></li>
         </ul>
     </nav>
-
     <main style="padding: 20px;">
         <p>Witaj na głównej stronie. Użyj menu nawigacyjnego powyżej, aby przejść do poszczególnych sekcji witryny.</p>
     </main>
+    </section>
 
 </body>
 </html>
